# mini_geom_project_new

./: README.md  pyproject.toml
mini_geom/: __init__.py  calculations.py  main.py
mini_geom_calculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
