# pyproject.toml

[build-system]
# Especificamos las herramientas necesarias para construir el paquete.
requires = ["setuptools>=61.0", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
# --- Metadatos del Paquete ---
name = "mini-geom-calculator"      # 游녣 El nombre que se usar치 en PyPI y con `pip install`
version = "1.0.0"                  # 游녣 Versi칩n actual (debe coincidir con __init__.py)
description = "Un paquete utilitario para c치lculos de geometr칤a simple."
readme = "README.md"
authors = [
    {name = "Su Nombre", email = "su.email@ejemplo.com"},
]
license = {text = "MIT License"}   # O especificar un archivo `LICENSE`
keywords = ["geometr칤a", "calculadora", "utilidades"]

# Clasificadores que ayudan a la gente a encontrar su paquete en PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", # Indica que no es completamente final
]

# Dependencias (si su paquete necesitara numpy, se listar칤a aqu칤)
dependencies = [
    # En este caso, solo necesitamos la librer칤a est치ndar math, no hay dependencias externas
]

[project.urls]
Homepage = "https://github.com/su-usuario/mini_geom_project"